adjusting styling for sidebar

--- a/task-manager/src/index.css
+++ b/task-manager/src/index.css
@@ -39,4 +39,9 @@ body {
     font-weight: 500;
     font-style: normal;
     cursor: pointer;
+        
+}
+
+.side-content button:hover {
+    background-color: #3b3b3b;
 }
